<resources>
    <string name="app_name">Foody</string>
    <string name="phienban">Version</string>
    <string name="dangtai">Loading..</string>
    <string name="dangnhap">Log In</string>
    <string name="hoac"> hoặc </string>
    <string name="dngoogle">Connect with Google</string>
    <string name="dnfacebook">Connect with Facebook</string>
    <string name="app_id">368421622317134</string>
    <string name="dangky">Sign up</string>
    <string name="quenmatkhau">Forgot password?</string>
    <string name="token">EAABsbCS1iHgBOZBr0FVVCgnJt6JHJhhN8AsVVNp2dGkZAXXktbBeCjTJLXNJ7v9XLX2GhVxjMieRczALpCjNy6ZATOc7MzKlgWWACStYmM4NOt1ZC4YzWavKB0mfJ0FxD9omnrNg7Yq9RvSi5iRqdHJZALHQu6dP3zFNVhaouAn78TKa3N8W8H7jtNQZDZD</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout"> Đăng xuất </string>
    <string name="progressDialog">Progressing</string>
    <string name="menu_home"> Trang chủ </string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="odau">where</string>
    <string name="angi">eat?</string>
    <string name="latest">latest</string>
    <string name="list">List</string>
    <string name="khuvuc">Hanoi</string>
    <string name="nearby">Gần đây</string>
    <string name="blog">Blog</string>
    <string name="delivery">Delivery</string>
    <string name="gamefun">Game</string>
    <string name="reviews">Bình luận</string>
    <string name="topmember">Top member</string>
    <string name="order">Order</string>
    <string name="photo">Ảnh</string>
    <string name="save">Yêu thích</string>
    <string name="share">Chia sẻ</string>
    <string name="checkin">Check-ins</string>
    <string name="inputName">Input name...</string>
    <string name="inputPassword">Input password ...</string>
    <string name="condition">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="diachi_khongco">Không có địa chỉ</string>
    <string name="post">Post</string>
    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="giaohang">Giao hàng</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>