<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/maincolor">

                <!-- Logout Icon -->
                <ImageView
                    android:id="@+id/btnLogoutAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingEnd="16dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_logout_24"
                    android:contentDescription="@string/logout"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thêm quán ăn"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.Toolbar>
            <EditText
                android:id="@+id/edTenQuanAn"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenquanan"
                />
<!--            <EditText-->
<!--                android:id="@+id/edGiaToiDa"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/giatoida"-->
<!--                android:text="0"-->
<!--                android:inputType="number"-->
<!--                />-->
<!--            <EditText-->
<!--                android:id="@+id/edGiaToiThieu"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="0"-->
<!--                android:hint="@string/giatoithieu"-->
<!--                android:inputType="number"-->
<!--                />-->
            <RadioGroup
                android:id="@+id/rdgTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <RadioButton
                    android:id="@+id/edGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giaohang"
                    android:buttonTint="@color/maincolor"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/edKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khonggiaohang"/>

            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnGioMoCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/maincolor"
                    android:text="@string/giomocua"/>
                <Button
                    android:id="@+id/btnGioDongCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/maincolor"
                    android:layout_weight="1"
                    android:text="@string/giodongcua"/>


            </LinearLayout>
<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="150dp"-->
<!--                android:src="@drawable/img_9"-->
<!--                android:scaleType="centerCrop"/>-->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/khungTienIch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>

            </HorizontalScrollView>
            <LinearLayout
                android:id="@+id/khungChuaChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerKhuVuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>
            <ImageView
                android:id="@+id/imgHinhQuan1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/img_11"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgHinhQuan2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_11"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/imgHinhQuan3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_11"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/imgHinhQuan4"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_11"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/imgHinhQuan5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_11"
                    android:scaleType="centerCrop"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/khungChuaThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/btnThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luuquanan"
                android:backgroundTint="@color/maincolor"
                android:textColor="@color/colorWhite"/>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>